added motor service to test_rpi3_gpio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_visual_tools
   roscpp
   rospy
+  std_msgs
+  message_generation
   shape_msgs
   tf
   trajectory_msgs
@@ -69,11 +71,10 @@ find_package(Boost REQUIRED
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  MotorStartTime.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -83,10 +84,10 @@ find_package(Boost REQUIRED
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   control_msgs#   geometry_msgs#   moveit_msgs#   shape_msgs#   trajectory_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
